# quickgrav

./: Cargo.toml  README.md
src/: default_space.rs  main.rs
static/: system1.json  system2.json  system3.json
